# Intership

./: README.md  pyproject.toml
api/: main.py
api/core/: models.py
cli/: HTTPRequest.py  HTTPResponse.py  config.py  config.toml  main.py
